--- a/index.html
+++ b/index.html
@@ -95,12 +95,15 @@
             display: flex;
             border-top: 2px solid var(--border-shadow);
             border-left: 2px solid var(--border-shadow);
+            min-height: 0; /* Flexbox fix */
         }
 
         .main-panel {
             flex-grow: 1;
             display: flex;
             flex-direction: column;
+            min-width: 0; /* Flexbox fix */
+            min-height: 0; /* Flexbox fix */
         }
 
         #task-panel {
@@ -122,6 +125,7 @@
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 1fr 1fr;
             gap: 10px;
+            min-height: 0; /* Flexbox fix */
         }
 
         .room {
@@ -182,24 +186,27 @@
 
 
         #elements-panel {
-            width: 120px;
+            width: 150px;
             border-left: 2px solid var(--border-shadow);
             padding-left: 10px;
             margin-left: 10px;
             display: flex;
-            flex-direction: column;
+            flex-flow: row wrap;
+            align-content: flex-start;
+            justify-content: center;
+            gap: 5px;
             overflow-y: auto;
         }
 
         .elements-title {
             font-weight: bold;
             margin-bottom: 10px;
+            width: 100%;
         }
 
         .device {
             width: 64px;
             height: 64px;
-            margin-bottom: 10px;
             border: 2px solid var(--win-bg);
             cursor: grab;
             display: flex;
